Trying the zap api

--- a/assets/iframe.html
+++ b/assets/iframe.html
@@ -32,6 +32,7 @@
   
   <ion-button id="get-summary-btn">Get Summary</ion-button>
   <ion-button id="alicia-btn">Alicia</ion-button>
+  <ion-button id="zap-summary-btn">Zap</ion-button>
 
   <!-- Include ZAF SDK and your JavaScript file -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
